# ai-bootcamp-dev-repo

./: .gitignore  README.md  docker-compose.yml  env.example  main.py  pyproject.toml
evals/: eval_retriever.py
notebooks/personal-project/: 00-try-hypersync-example.ipynb  01-research-data.ipynb  02-analyze-data.ipynb
notebooks/week_1/: 01-llm-apis.py  02-explore-amazon-dataset.ipynb  03-explore-arxiv-api.ipynb  test.ipynb
notebooks/week_2/: 01-RAG-processing-Amazon.ipynb  02-RAG-pipeline.ipynb  03-evaluation-dataset.ipynb  04-RAGAS-evals.ipynb
notebooks/week_3/: 01-structured-outputs-intro.ipynb  02-structured-outputs-rag-pipeline.ipynb  04-Reranking.ipynb  05-Prompt-versioning.ipynb
notebooks/week_3/prompts/: retrieval_generation.yaml
notebooks/week_4/: 01-langgraph-intro.ipynb  02-Query-Rewriting.ipynb  03-Router.ipynb  04-Agent-Single-Turn.ipynb
notebooks/week_5/: 01-Agent-Multi-Turn.ipynb  05-MCP.ipynb
src/api/: app.py
src/api/agent/: graph.py
src/api/agent/prompts/: intent_router_agent.yaml  qa_agent.yaml
src/api/api/: endpoints.py  middleware.py  models.py
src/api/core/: config.py
src/api/rag/: retrieval_generation.py
src/chatbot_ui/: app.py
