[project]
name = "ai-bootcamp-dev-repo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.118.0",
    "google-genai>=1.41.0",
    "groq>=0.32.0",
    "ipykernel>=6.30.1",
    "langgraph>=0.6.8",
    "langsmith>=0.4.33",
    "matplotlib>=3.10.6",
    "openai>=2.0.1",
    "pandas>=2.3.3",
    "pydantic>=2.11.9",
    "pydantic-settings>=2.11.0",
    "qdrant-client>=1.15.1",
    "requests>=2.32.5",
    "streamlit>=1.50.0",
    "uvicorn>=0.37.0",
]
